Sun Feb 17 18:15:22 2002  Owen Taylor  <otaylor@redhat.com>

	* gmodule.c (g_module_open): Fix typo when checking
	if file + module_suffix exists. (Miroslaw Dobrzanski-Neumann,
	#71801)

2001-11-24  Tor Lillqvist  <tml@iki.fi>

	* Makefile.am: Remove rule for testgmodule.exp, too.

2001-11-22  Tor Lillqvist  <tml@iki.fi>

	* gmodule-win32.c: Current w32api headers do include tlhelp32.h,
	so no need to have an extract from it here.

Mon Nov 19 16:12:12 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am makefile.msc.in makefile.mingw.in: Remove
	testgmodule and associated plugin files; we don't need _both_ this
	and ../tests/module-test.c

2001-11-16  Michael Meeks  <michael@ximian.com>

	* gmodule.c (parse_libtool_archive): fix leak.

2001-10-30  Dan Winship  <danw@ximian.com>

	* Makefile.am (EXTRA_DIST): Add gmodule-dyld.c

2001-10-23  Tor Lillqvist  <tml@iki.fi>

	* Makefile.am: (Win32): If we have built the MSVC import library,
	install it. Install the gcc import library. Also support
	uninstall.

2001-10-09  Tor Lillqvist  <tml@iki.fi>

	* gmodule-win32.c (_g_module_build_path): More Unix compatibility:
	Add "lib" prefix in case the module name doesn't already have it,
	except if it ends with ".dll" (in which case it probably already
	is the name of an existing DLL). This is needed for instance for
	the gdk-pixbuf loaders, which are called "lib*.dll", but
	gdk-pixbuf-io calls g_module_build_path without the "lib" prefix.

2001-10-03  jacob berkman  <jacob@ximian.com>

	* libgplugin_a.c: (gplugin_a_module_func): 
	* gmodule.h: s/retrive/retrieve/

2001-09-25  Tor Lillqvist  <tml@iki.fi>

	* makefile.mingw.in: Fix missing end @ in @LT_CURRENT@.

	* makefile.msc.in: Use same DLL and import library names as
	libtool.
	
2001-09-19  Tor Lillqvist  <tml@iki.fi>

	* gmodule.rc.in: Correct InternalName and OriginalFilename to
	match what we actually produce.

2001-09-18  Tor Lillqvist  <tml@iki.fi>

	* Makefile.am: On Win32, pass a dummy -rpath flag to libtool when