@@ -190,10 +190,10 @@ _g_module_build_path (const gchar *directory,
       if (strncmp (module_name, "lib", 3) == 0)
 	return g_strconcat (directory, "/", module_name, NULL);
       else
-	return g_strconcat (directory, "/lib", module_name, ".so", NULL);
+	return g_strconcat (directory, "/lib", module_name, "." G_MODULE_SUFFIX, NULL);
     }
   else if (strncmp (module_name, "lib", 3) == 0)
     return g_strdup (module_name);
   else
-    return g_strconcat ("lib", module_name, ".so", NULL);
+    return g_strconcat ("lib", module_name, "." G_MODULE_SUFFIX, NULL);
 }
